--- a/medusa-backend/my-medusa-app/package.json
+++ b/medusa-backend/my-medusa-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medusa-starter-default",
+  "name": "my-medusa-app",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
   "author": "Medusa (https://medusajs.com)",
@@ -22,20 +22,23 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "latest",
-    "@medusajs/cli": "latest",
-    "@medusajs/framework": "latest",
-    "@medusajs/medusa": "latest",
-    "@mikro-orm/core": "5.9.7",
-    "@mikro-orm/knex": "5.9.7",
-    "@mikro-orm/migrations": "5.9.7",
-    "@mikro-orm/postgresql": "5.9.7",
+    "@medusajs/admin-sdk": "2.6.1",
+    "@medusajs/cli": "2.6.1",
+    "@medusajs/framework": "2.6.1",
+    "@medusajs/medusa": "2.6.1",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/knex": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
+    "@visa/payment-anet": "file:.yalc/@visa/payment-anet",
+    "authorizenet": "^1.0.9",
     "awilix": "^8.0.1",
+    "medusa-payment-authorizenet": "file:.yalc/medusa-payment-authorizenet",
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "latest",
-    "@mikro-orm/cli": "5.9.7",
+    "@medusajs/test-utils": "2.6.1",
+    "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
@@ -48,7 +51,8 @@
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "yalc": "^1.0.0-pre.53"
   },
   "engines": {
     "node": ">=20"
